--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,18 @@
 @import "./settings/reset";
-@import url("https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:300,400,700&display=swap");
 @import "./settings/fonts";
 @import "./settings/colors";
 
 body {
   font-family: $font_base;
+}
+
+#root {
+  max-width: 1700px;
+  margin: 0 auto;
+}
+
+a {
+  color: $brown;
+  text-decoration: none;
 }
