--- a/src/components/Home/Button/style.scss
+++ b/src/components/Home/Button/style.scss
@@ -5,10 +5,8 @@
   padding: 20px;
   border: 1px solid $darkgrey;
   font-weight: 300;
-}
-
-.big {
-  max-width: 300px;
+  line-height: 42px;
+  width: 300px;
   font-size: 36px;
   text-transform: uppercase;
 }
