--- a/src/components/Home/Header/style.scss
+++ b/src/components/Home/Header/style.scss
@@ -13,6 +13,7 @@ ul {
   display: flex;
   justify-content: flex-end;
   height: 80vh;
+  max-height: 950px;
   background-image: url(../../../assets/Home-Hero-Image.jpg);
   background-size: contain;
   background-position: -400px 50%;
