added contact form styles

--- a/src/components/Elements/Button/style.scss
+++ b/src/components/Elements/Button/style.scss
@@ -4,9 +4,10 @@
   background-color: white;
   padding: 20px;
   border: 1px solid $darkgrey;
-  font-weight: 300;
+  font-weight: 200;
   line-height: 42px;
   width: 300px;
+  font-family: "Open Sans";
   font-size: 36px;
   text-transform: uppercase;
 }
