--- a/src/components/Home/6_Contact/style.scss
+++ b/src/components/Home/6_Contact/style.scss
@@ -2,35 +2,82 @@
 
 .contact {
   display: flex;
-  justify-content: flex-end;
-  height: 900px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  height: 85vh;
+  max-height: 900px;
   &::after {
     content: "";
     background: url(../../../assets/Background-Contact-Form.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 900px;
+    height: 85vh;
+    max-height: 900px;
     width: 100%;
     max-width: 1920px;
     opacity: 0.3;
     position: absolute;
   }
+
   .contact_content {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: 100px;
-
+    margin: 150px;
+    width: 450px;
     form {
       display: flex;
       flex-direction: column;
-      input:last-of-type {
+      font-size: 16px;
+      font-weight: bold;
+      margin-top: 20px;
+      & * {
+        display: block;
+        padding: 15px 0;
+      }
+      textarea {
+        height: 100px;
+        padding-top: 0;
+      }
+      input,
+      textarea {
+        width: 100%;
+        border: none;
+        border-bottom: 1px solid $brown;
+        padding-bottom: 5px;
+      }
+      input::placeholder,
+      textarea::placeholder {
+        opacity: 0.5;
+        font-family: $font-base;
+      }
+      .name_email {
+        display: flex;
+        justify-content: space-between;
+        & > * {
+          width: 48%;
+        }
+      }
+      .small_button {
+        border: 1px solid $brown;
         text-transform: none;
         font-size: 18px;
+        font-weight: 400;
         width: 150px;
         padding: 0;
+        margin-top: 30px;
         align-self: flex-end;
       }
+    }
+  }
+
+  .social-media {
+    margin: 0 150px;
+    margin-bottom: -50px;
+    a {
+      cursor: pointer;
+      padding-left: 20px;
     }
   }
 }
