--- a/src/components/Elements/Button/style.scss
+++ b/src/components/Elements/Button/style.scss
@@ -11,3 +11,15 @@
   font-size: 36px;
   text-transform: uppercase;
 }
+
+.small_button {
+  background: none;
+  border: 1px solid $brown;
+  text-transform: none;
+  font-size: 18px;
+  font-weight: 400;
+  width: 150px;
+  padding: 0;
+  margin-top: 30px;
+  align-self: flex-end;
+}
