added initial mobile view

--- a/src/components/Home/2_Info/style.scss
+++ b/src/components/Home/2_Info/style.scss
@@ -26,3 +26,18 @@
     }
   }
 }
+
+// @media (max-width: 800px) {
+//   .three_columns {
+//     margin-top: 250px !important;
+//   }
+// }
+
+@media (max-width: 1400px) {
+  .three_columns {
+    flex-direction: column;
+    .column {
+      margin: auto;
+    }
+  }
+}
