--- a/src/components/Home/1_Header/style.scss
+++ b/src/components/Home/1_Header/style.scss
@@ -36,3 +36,34 @@ ul {
   display: flex;
   justify-content: space-evenly;
 }
+
+@media (max-width: 800px) {
+  .header {
+    background-image: none;
+    justify-content: center !important;
+    h1 {
+      margin-top: 20px;
+    }
+  }
+}
+
+@media (max-width: 1400px) {
+  .header {
+    height: auto;
+    background-size: cover;
+    justify-content: flex-end;
+    .header_content {
+      width: 50%;
+      max-height: 200%;
+      h1 {
+        margin-top: 20px;
+      }
+      .buttons {
+        flex-wrap: wrap;
+        button {
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+}
