--- a/src/components/Home/5_Organizations/Foundations.scss
+++ b/src/components/Home/5_Organizations/Foundations.scss
@@ -34,3 +34,22 @@
     border: none;
   }
 }
+
+@media (max-width: 1400px) {
+  .list {
+    width: 85%;
+    div {
+      h5 {
+        font-size: 18px !important;
+      }
+      p {
+        font-size: 14px !important;
+        text-align: left !important;
+      }
+    }
+    li > p {
+      font-size: 14px !important;
+      max-width: 30% !important;
+    }
+  }
+}
