added form validation

--- a/src/components/Home/6_Contact/style.scss
+++ b/src/components/Home/6_Contact/style.scss
@@ -44,7 +44,7 @@
       }
       input,
       textarea {
-        background: rgba(245, 243, 243, 0.5);
+        background: none;
         width: 100%;
         border: none;
         border-bottom: 1px solid $brown;
@@ -55,15 +55,18 @@
         opacity: 0.7;
         font-family: $font-base;
       }
+      input + p,
+      textarea + p {
+        color: red;
+        font-size: 12px;
+      }
+
       .name_email {
         display: flex;
         justify-content: space-between;
         & > * {
           width: 48%;
         }
-      }
-      button {
-        background: rgba(245, 243, 243, 0.5);
       }
     }
   }
@@ -101,5 +104,12 @@
   }
   .social-media {
     margin: 30px 10px !important;
+  }
+  input,
+  textarea {
+    background: rgba(245, 243, 243, 0.5) !important;
+  }
+  button {
+    background: rgba(245, 243, 243, 0.5) !important;
   }
 }
