--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -15,7 +15,7 @@
     .title {
       margin-bottom: 40px;
     }
-    form {
+    .form {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -35,6 +35,12 @@
         border: none;
         border-bottom: 1px solid $lightgrey;
         background: $white;
+      }
+      input + p {
+        color: red;
+        font-size: 12px;
+        margin-top: -20px;
+        margin-bottom: 30px;
       }
     }
   }
