--- a/src/components/Home/7_Footer/style.scss
+++ b/src/components/Home/7_Footer/style.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: $white;
+  background: white;
   padding: 10px;
   .sm-logos {
     display: flex;
