--- a/src/components/Home/1_Header/style.scss
+++ b/src/components/Home/1_Header/style.scss
@@ -37,33 +37,44 @@ ul {
   justify-content: space-evenly;
 }
 
-@media (max-width: 800px) {
-  .header {
-    background-image: none;
-    justify-content: center !important;
-    h1 {
-      margin-top: 20px;
-    }
-  }
-}
-
 @media (max-width: 1400px) {
   .header {
     height: auto;
     background-size: cover;
     justify-content: flex-end;
     .header_content {
-      width: 50%;
+      width: 100%;
       max-height: 200%;
+      background: rgba(245, 243, 243, 0.75);
       h1 {
-        margin-top: 20px;
+        margin-top: 50px;
       }
       .buttons {
         flex-wrap: wrap;
-        button {
-          margin-bottom: 20px;
+        margin-bottom: 50px;
+        .button:last-of-type {
+          margin-top: 20px;
         }
       }
     }
+  }
+}
+
+@media (max-width: 1000px) {
+  .header {
+    justify-content: center !important;
+    .header_content {
+      width: 100%;
+      height: 100%;
+      h1 {
+        margin-top: 40px;
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  h1 {
+    margin-bottom: 10px !important;
   }
 }
