--- a/src/components/Home/1_Header/LowerMenu/style.scss
+++ b/src/components/Home/1_Header/LowerMenu/style.scss
@@ -17,15 +17,20 @@ nav:last-of-type {
   border: 1px solid $brown;
 }
 
+.menu_button {
+  display: none;
+}
+
 @media (max-width: 750px) {
   .lower_menu {
+    display: none;
     flex-direction: column;
     justify-content: space-evenly;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
-    width: 80%;
+    width: 100%;
     height: 100%;
     background: $white;
     li:first-of-type {
@@ -35,18 +40,22 @@ nav:last-of-type {
       border: 1px solid transparent !important;
     }
   }
+  .visible_menu {
+    display: flex;
+  }
   .menu_button {
     position: absolute;
     top: 0;
     left: 0;
+    width: 40px;
+    height: 40px;
     margin: 20px;
-    margin-top: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    z-index: 2;
+    cursor: pointer;
     .hamburger {
-      transition: all 0.5s ease-in-out;
       width: 35px;
       height: 3px;
       background-color: $brown;
