--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -7,6 +7,14 @@
   .lower_menu {
     margin-right: 100px;
   }
+  .home_button {
+    border: none;
+    background: none;
+    font-size: 40px;
+    position: absolute;
+    top: 10px;
+    left: 20px;
+  }
   .login_content,
   .register_content {
     margin: 100px auto;
