--- a/src/components/Home/6_Contact/style.scss
+++ b/src/components/Home/6_Contact/style.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: flex-end;
   height: 85vh;
+  max-height: 900px;
   background: url(../../../assets/Background-Contact-Form.jpg);
   background-size: cover;
   .contact_content {
